# RegionsPython

./: LICENSE
fmatoolbox/: pyproject.toml
fmatoolbox/src/fmatoolbox/: __init__.py  analysis.py  data.py  general.py  plotting.py
regions/: LICENSE  pyproject.toml
regions/data/: nonlateral.anat
regions/src/regions/: __init__.py  computation.py  data.py  loaders.py
