[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fmatoolbox"
version = "0.1.0"
description = "Python port of FMAToolbox"
authors = [{name = "Pietro Bozzo"}]
readme = ""
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
