[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "regions"
version = "0.1.0"
description = "Python port of Regions"
authors = [{name = "Pietro Bozzo"}]
readme = ""
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
